<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_location"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".UI.LocationDetailsFragment">


    <TextView
        android:id="@+id/locationNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/location_details_name"
        style="@style/MainTextStyle"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/circular_progress_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/button_shape"
        android:padding="5dp"
        android:text="@string/location_details_button_text"
        style="@style/MainTextStyle"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:finalCornerAngle="50dp"
        app:initialCornerAngle="0dp"
        app:spinning_bar_color="@color/colorAccent"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_width="4dp" />

    <ImageView
        android:id="@+id/location_imageview"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/location_details_image_description"
        android:scaleType="center"
        android:src="@mipmap/ic_launcher"
        android:transitionName="@string/locationImageTransition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/addressTextViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/location_detail_address_label"
        style="@style/MainTextStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_imageview" />

    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:text="@string/location_details_address"
        style="@style/SmolTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addressTextViewLabel"
        app:layout_constraintTop_toBottomOf="@+id/location_imageview" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_imageview">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:text="@string/location_details_monday"
                style="@style/SmolTextStyle" />

            <TextView
                android:id="@+id/MondayOpenHours"
                android:text="@string/location_details_time_monday"
                style="@style/SmolTextStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SmolTextStyle">

            <TextView android:text="@string/location_details_tuesday"
                style="@style/SmolTextStyle"/>

            <TextView
                android:id="@+id/TuesdayOpenHours"
                android:text="@string/location_details_time_tuesday"
                style="@style/SmolTextStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:text="@string/location_details_wednesday"
                style="@style/SmolTextStyle" />

            <TextView
                android:id="@+id/WednesdayOpenHours"
                android:text="@string/location_details_time_wednesday"
                style="@style/SmolTextStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:text="@string/location_details_thursday"
                style="@style/SmolTextStyle" />

            <TextView
                android:id="@+id/ThursdayOpenHours"
                android:text="@string/location_details_time_thursday"
                style="@style/SmolTextStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:text="@string/location_details_friday"
                style="@style/SmolTextStyle" />

            <TextView
                android:id="@+id/FridayOpenHours"
                android:text="@string/location_details_time_friday"
                style="@style/SmolTextStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:text="@string/location_details_saturday"
                style="@style/SmolTextStyle" />

            <TextView
                android:id="@+id/SaturdayOpenHours"
                android:text="@string/location_details_time_saturday"
                style="@style/SmolTextStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:text="@string/location_details_sunday"
                style="@style/SmolTextStyle" />

            <TextView
                android:id="@+id/SundayOpenHours"
                android:text="@string/location_details_time_sunday"
                style="@style/SmolTextStyle" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>