<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/smallViewLayout"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_margin="5dp"
    android:background="@drawable/location_smallview_shape"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/location_imageview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="10dp"
        android:scaleType="centerCrop"
        android:transitionName="@string/locationImageTransition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_photo_black_48dp" />

    <TextView
        android:id="@+id/location_name"
        style="@style/MainTextStyleDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/locations_smallview_first_textview"
        app:layout_constraintStart_toEndOf="@+id/location_imageview"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location_address"
        style="@style/SmollerTextStyleDark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/location_smallview_second_textview"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toEndOf="@+id/location_imageview"
        app:layout_constraintTop_toBottomOf="@+id/location_name"
        app:layout_constraintWidth_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>